[package]
name = "lanmap"
version = "0.1.0"
edition = "2021"
description = "Live LAN scanner with terminal dashboard"

[dependencies]
tokio = { version = "1", features = ["full"] }
surge-ping = "0.8"
network-interface = "2.0"
ipnetwork = "0.20"
dns-lookup = "2.0"
ratatui = "0.28"
crossterm = "0.28"
rand = "0.8"
anyhow = "1"
